# test-task-rishat

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
test_task_rishat/: asgi.py  settings.py  urls.py  wsgi.py
test_task_rishat/items/: apps.py  models.py  views.py
test_task_rishat/items/migrations/: 0001_initial.py
test_task_rishat/templates/: success.html
