[tool.poetry]
name = "test-task-rishat"
version = "0.1.0"
description = "Test task from \"Rishat\" company"
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_rishat"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
python-dotenv = "^0.21.1"
stripe = "^5.1.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
